--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-redux": "^7.2.9",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "react-toastify": "^8.1.1",
     "web-vitals": "^2.1.4"
   },
